syntax = "proto3";

package serval.platform.result.v1;

import "google/protobuf/empty.proto";

service ResultService {
    rpc DeleteAllPretranslations(DeleteAllPretranslationsRequest) returns (google.protobuf.Empty);
    rpc InsertPretranslations(stream InsertPretranslationRequest) returns (google.protobuf.Empty);
}

message DeleteAllPretranslationsRequest {
    string engine_id = 1;
}

message InsertPretranslationRequest {
    string engine_id = 1;
    string corpus_id = 2;
    string text_id = 3;
    repeated string refs = 4;
    string translation = 5;
}
