syntax = "proto3";

package serval.assessment.v1;

import "google/protobuf/empty.proto";
import "Protos/serval/base/engine.proto";

service AssessmentEngineApi {
    rpc Create(CreateRequest) returns (google.protobuf.Empty);
    rpc Delete(serval.base.DeleteRequest) returns (google.protobuf.Empty);
    rpc StartJob(StartJobRequest) returns (google.protobuf.Empty);
    rpc CancelJob(serval.base.CancelJobRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
    string engine_type = 1;
    string engine_id = 2;
    optional string engine_name = 3;
}

message StartJobRequest {
    string engine_type = 1;
    string engine_id = 2;
    string job_id = 3;
    serval.base.Corpus corpus = 4;
    optional serval.base.Corpus reference_corpus = 5;
    bool include_all = 6;
    map<string, serval.base.ScriptureChapters> include_chapters = 7;
    repeated string include_text_ids = 8;
    optional string options = 9;
}